Refactor, create first project-shaowcase page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <!--= PRIMARY PAGE LAYOUT
 =======================================================================-->
-  <body class="case">
+  <body class="case__home">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
@@ -95,7 +95,7 @@
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12">
         <a href="index.html">
-          <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.</h1>
+          <h1 class="headline-primary--major">Hi, my name is Ali Esmaili.</h1>
           <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
         </a>
       </div>
@@ -141,7 +141,7 @@
     </aside>
 
     <!-- Main -->
-    <main role="main" class="grid grid__col--12 panel--centered"></main>
+    <main role="main" class="panel"></main>
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
@@ -192,7 +192,6 @@
     <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
-
 
 <!--= GOOGLE ANALYTICS
 =======================================================================-->
