--- a/showcase-ourhouse.html
+++ b/showcase-ourhouse.html
@@ -1,4 +1,4 @@
-<!-- flyer.html -->
+<!-- showcase-ourhouse.html -->
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
@@ -87,7 +87,7 @@
 
 <!--= PRIMARY PAGE LAYOUT
 =======================================================================-->
-  <body class="case__flyer">
+  <body class="case__ourhouse">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
@@ -95,8 +95,8 @@
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12 centered">
         <a href="index.html">
-          <h1 class="headline-primary--major">Hi, my name is Ali Esmaili.</h1>
-          <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
+          <h1 class="headline-primary--major">OurHouse</h1>
+          <!-- <h1 class="headline-primary--minor">Housemates doing house things.</h1> -->
         </a>
       </div>
     </header>
@@ -143,117 +143,77 @@
     <!-- Main -->
     <main class="layer-gradient--to-b">
 
-      <!-- Blurb -->
-      <section id="blurb">
+      <!-- OurHouse Showcase -->
+      <section id="showcase-ourhouse">
         <article class="grid">
           <header class="grid__col--12 panel--centered">
-            <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
-            <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-            Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-            Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+            <h2 class="headline-secondary--grouped">Housemates doing house things.</h2>
+          </header>
+
+          <div class="grid__col--4 vid">
+            <video autoplay loop class="vid">
+              <source src="public/videos/OurHouse.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="grid__col--7">
+            <p class="para-primary"><strong>OurHouse</strong> is a mobile and web app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br>
+            The functionality of the app is contained within a sleek and intuitive interface, divided into four main sections.<br><br>
+            <strong>Home</strong>: Respond to and delete tasks, notifications, and activity invitations from other housemates, with support for filtering by message type.<br><br>
+            <strong>Message</strong>: Send any type of message to the other members of the house.<br><br>
+            <strong>Payments</strong>: Connect to Venmo and send money to any of the house members.<br><br>
+            <strong>Housemates</strong>: Add new housemates and view the profiles and message history of existing housemates.</p>
+          </div>
+        </article>
+      </section>
+
+      <!-- Info Spacer -->
+      <section class="layer-pic__uno" id="info-spacer">
+        <article class="grid">
+          <header class="grid__col--12">
+            <h2 class="panel--centered headline-secondary--liner">Info</h2>
           </header>
         </article>
       </section>
 
-      <!-- Personal -->
-      <section id="personal">
+      <!-- Info -->
+      <section id="info">
         <article class="grid">
           <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">About me as a person</h2>
-          </header>
-          <span class="grid__col--5">
-            VECTOR ICONS HOOK
-          </span>
-
-          <span class="grid__col--6">
-            <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-            I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-            I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
-          </span>
-        </article>
-      </section>
-
-      <!-- Experience -->
-      <section id="experience">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">I have Experience in life</h2>
-          </header>
-
-          <span class="grid__col--6">
-            <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
-            Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-            Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
-            LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
-          </span>
-
-          <span class="grid__col--5">
-            <span>
-              <img class="img--avatar" src="public/images/ali/SuitAndCape_Headshot-640x640.jpg" alt="">
+            <span class="grid__col--12">
+              <p class="para-primary"><strong>Front-End</strong>:<br>AngularJS, Ionic Mobile Framework, JavaScript, jQuery, HTML5, CSS3<br><br>
+              <strong>Back-End</strong>:<br>Ruby on Rails<br><br>
+              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
             </span>
-          </span>
-        </article>
-      </section>
-
-      <!-- Tools -->
-      <section id="tools">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-            <h3 class="headline-tertiary">Digital</h3>
-            <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
-            <h3 class="headline-tertiary">Physical</h3>
-            <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
-            <h3 class="headline-tertiary">Other</h3>
-            <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
           </header>
         </article>
       </section>
 
-      <!-- Projects -->
-      <section id="projects">
+      <!-- Journey Spacer -->
+      <section class="layer-pic__dos" id="journey-spacer">
         <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Projects</h2>
+          <header class="grid__col--12">
+            <h2 class="panel--centered headline-secondary--liner">The Journey</h2>
           </header>
         </article>
+      </section>
 
+      <!-- Journey -->
+      <section id="journey">
         <article class="grid">
-          <span class="grid__col--12">
-            <ul class="grid__col--12 panel--centered">
-              <li>
-                <form action="projects.html">
-                  <input type="submit" value="Projects Page" class="btn--info bump">
-                </form>
-                <!-- <a href="#" class="button">Projects Page</a> -->
-              </li>
-            </ul>
-
-            <span class="grid__col--12 panel--centered">
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
-                <h3>Project One</h3>
-                <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
-              </article>
-
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_05.jpg" alt=""></a>
-                <h3>Project Two</h3>
-                <p class="para-primary">Kinda counted on you being a friend, Can I give it up or give it away</p>
-              </article>
-
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
-                <h3>Project Three</h3>
-                <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
-              </article>
+          <header class="panel">
+            <span class="grid__col--12">
+              <p class="para-primary"><strong>Front-End</strong>:<br>AngularJS, Ionic Mobile Framework, JavaScript, jQuery, HTML5, CSS3<br><br>
+              <strong>Back-End</strong>:<br>Ruby on Rails, ActiveRecord<br><br>
+              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
             </span>
-          </span>
+          </header>
         </article>
       </section>
+
+
+
+
     </main>
 
     <!-- Footer -->
@@ -296,17 +256,6 @@
             <li>&copy; Ali Esmaili</li>
           </ul>
         </nav>
-
-        <div class"grid__col--12">
-          <div class="do-the-thing panel--centered">
-            <div class="elevator" alt="Elevator.js by Tim Holman">
-              <svg class="sweet-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" height="100px" width="100px">
-                <path d="M70,47.5H30c-1.4,0-2.5,1.1-2.5,2.5v40c0,1.4,1.1,2.5,2.5,2.5h40c1.4,0,2.5-1.1,2.5-2.5V50C72.5,48.6,71.4,47.5,70,47.5z   M47.5,87.5h-5v-25h5V87.5z M57.5,87.5h-5v-25h5V87.5z M67.5,87.5h-5V60c0-1.4-1.1-2.5-2.5-2.5H40c-1.4,0-2.5,1.1-2.5,2.5v27.5h-5  v-35h35V87.5z"/>
-                <path d="M50,42.5c1.4,0,2.5-1.1,2.5-2.5V16l5.7,5.7c0.5,0.5,1.1,0.7,1.8,0.7s1.3-0.2,1.8-0.7c1-1,1-2.6,0-3.5l-10-10  c-1-1-2.6-1-3.5,0l-10,10c-1,1-1,2.6,0,3.5c1,1,2.6,1,3.5,0l5.7-5.7v24C47.5,41.4,48.6,42.5,50,42.5z"/>
-              </svg>Back to Top
-            </div>
-          </div>
-        </div>
       </article>
     </footer>
 
@@ -315,18 +264,7 @@
     <script type="text/javascript" src="public/js/jquery-2.1.3.js"></script>
     <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
-    <script type="text/javascript" src="public/js/elevator.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
-    <script>
-      // Simple elevator usage.
-      var elementButton = document.querySelector('.elevator');
-      var elevator = new Elevator({
-        element: elementButton,
-        mainAudio: 'public/music/elevator-music.mp3', // Music from http://www.bensound.com/
-        endAudio:  'public/music/ding.mp3', // Music from http://www.bensound.com/
-        duration: 11000 // milliseconds
-      });
-    </script>
 
 <!--= GOOGLE ANALYTICS
 =======================================================================-->
