--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 
 <!--= PRIMARY PAGE LAYOUT
 =======================================================================-->
-  <body class="case">
+  <body class="case__about">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
@@ -95,8 +95,8 @@
     <header role="banner" id="banner" class="grid panel--main--centered">
       <div class="grid__col--12">
         <a href="index.html">
-          <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.</h1>
-          <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1>
+          <h1 class="headline-primary--major">About</h1>
+          <!-- <h1 class="headline-primary--minor">I'm a full-stack developer, with a penchant for creating & tinkering.</h1> -->
         </a>
       </div>
     </header>
@@ -140,93 +140,97 @@
       </nav>
     </aside>
 
-    <!-- About -->
-    <section id="about" class="layer-gradient--to-b">
+    <!-- Main -->
+    <main class="layer-gradient--to-b">
 
-      <!-- About navigation -->
-      <article class="grid about-nav">
-        <div class="grid__col--12 panel--centered">
-<!--           <form class="rdo--warning is-collapsed-mobile">
-            <label for="slides_1">Blurb</label>
-          </form>
-          <form class="rdo--warning is-collapsed-mobile">
-            <label for="slides_2">Personal</label>
-          </form>
-          <form class="rdo--warning is-collapsed-mobile">
-            <label for="slides_3">Experience</label>
-          </form>
-          <form class="rdo--warning is-collapsed-mobile">
-            <label for="slides_4">Tools</label>
-          </form> -->
-          <label for="slides_1" class="rdo--warning is-collapsed-mobile">Blurb</label>
-          <label for="slides_2" class="rdo--warning is-collapsed-mobile">Personal</label>
-          <label for="slides_3" class="rdo--warning is-collapsed-mobile">Experience</label>
-          <label for="slides_4" class="rdo--warning is-collapsed-mobile">Tools</label>
-          <!-- <label for="slides_5"  class="rdo--warning is-collapsed-mobile">Gallery</label> -->
-        </div>
-      </article>
+      <!-- About -->
+      <section id="about">
 
-      <article class="grid looper slideshow">
-        <input type="radio" name="slides" checked="checked" id="slides_1">
-        <input type="radio" name="slides" id="slides_2">
-        <input type="radio" name="slides" id="slides_3">
-        <input type="radio" name="slides" id="slides_4">
+        <!-- About navigation -->
+        <article class="grid about-nav">
+          <div class="grid__col--12 panel--centered">
+            <!-- <form class="rdo--warning is-collapsed-mobile">
+              <label for="slides_1">Blurb</label>
+            </form>
+            <form class="rdo--warning is-collapsed-mobile">
+              <label for="slides_2">Personal</label>
+            </form>
+            <form class="rdo--warning is-collapsed-mobile">
+              <label for="slides_3">Experience</label>
+            </form>
+            <form class="rdo--warning is-collapsed-mobile">
+              <label for="slides_4">Tools</label>
+            </form> -->
+            <label for="slides_1" class="rdo--warning is-collapsed-mobile">Blurb</label>
+            <label for="slides_2" class="rdo--warning is-collapsed-mobile">Personal</label>
+            <label for="slides_3" class="rdo--warning is-collapsed-mobile">Experience</label>
+            <label for="slides_4" class="rdo--warning is-collapsed-mobile">Tools</label>
+            <!-- <label for="slides_5"  class="rdo--warning is-collapsed-mobile">Gallery</label> -->
+          </div>
+        </article>
 
-        <ul class="grid__col--12">
-          <li class="overscroll">
-            <header class="panel--centered">
-              <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
-              <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-              Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-              Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
-            </header>
-          </li>
+        <article class="grid looper slideshow">
+          <input type="radio" name="slides" checked="checked" id="slides_1">
+          <input type="radio" name="slides" id="slides_2">
+          <input type="radio" name="slides" id="slides_3">
+          <input type="radio" name="slides" id="slides_4">
 
-          <li class="overscroll">
-            <header class="panel--centered">
-              <h2 class="headline-secondary--grouped">About me as a person</h2>
-              <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-              I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-              Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-              I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-              I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-              I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
-            </header>
-          </li>
+          <ul class="grid__col--12">
+            <li class="overscroll">
+              <header class="panel--centered">
+                <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
+                <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
+                Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
+                Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+              </header>
+            </li>
 
-          <li class="overscroll">
-            <header class="panel--centered">
-              <h2 class="headline-secondary--grouped">I have Experience in life</h2>
-              <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
-              Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-              Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
-              LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
-            </header>
-          </li>
+            <li class="overscroll">
+              <header class="panel--centered">
+                <h2 class="headline-secondary--grouped">About me as a person</h2>
+                <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
+                I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
+                Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
+                I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
+                I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
+                I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
+              </header>
+            </li>
 
-          <li class="overscroll">
-            <header class="panel--centered">
-              <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-              <h3 class="headline-tertiary">Digital</h3>
-              <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
-              <h3 class="headline-tertiary">Physical</h3>
-              <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
-              <h3 class="headline-tertiary">Other</h3>
-              <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
-            </header>
-          </li>
-        </ul>
+            <li class="overscroll">
+              <header class="panel--centered">
+                <h2 class="headline-secondary--grouped">I have Experience in life</h2>
+                <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
+                Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
+                Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!<br>
+                LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
+              </header>
+            </li>
 
-        <div class="side-scroller is-displayed-mobile">
-          <label for="slides_1" class="arrow"></label>
-          <label for="slides_2" class="arrow"></label>
-          <label for="slides_3" class="arrow"></label>
-          <label for="slides_4" class="arrow"></label>
-          <label for="slides_1" class="jump-start arrow"></label>
-          <label for="slides_4" class="jump-end arrow"></label>
-        </div>
-      </article>
-    </section>
+            <li class="overscroll">
+              <header class="panel--centered">
+                <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
+                <h3 class="headline-tertiary">Digital</h3>
+                <p class="para-primary">Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework</p>
+                <h3 class="headline-tertiary">Physical</h3>
+                <p class="para-primary">Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered</p>
+                <h3 class="headline-tertiary">Other</h3>
+                <p class="para-primary">Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff</p>
+              </header>
+            </li>
+          </ul>
+
+          <div class="side-scroller is-displayed-mobile">
+            <label for="slides_1" class="arrow"></label>
+            <label for="slides_2" class="arrow"></label>
+            <label for="slides_3" class="arrow"></label>
+            <label for="slides_4" class="arrow"></label>
+            <label for="slides_1" class="jump-start arrow"></label>
+            <label for="slides_4" class="jump-end arrow"></label>
+          </div>
+        </article>
+      </section>
+    </main>
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
@@ -277,7 +281,6 @@
     <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
-
 
 <!--= GOOGLE ANALYTICS
 =======================================================================-->
