Create proper project showcase page, make it look good and act responsive; add images, add video, add pure css image overlay, add source link for OurHouse

--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
           <div class="grid__col--7 project-summary">
             <h3 class="headline-tertiary">OurHouse</h3>
             <p class="para-primary">A mobile app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.</p>
-            <p class="para-primary"><strong>Specs:</strong><br>AngularJS, Ionic Mobile Framework, Ruby on Rails, JavaScript, jQuery, HTML5, CSS3, ActiveRecord, Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
+            <p class="para-primary"><strong>Specs:</strong><br>AngularJS, Ionic Mobile Framework, Ruby on Rails, JavaScript, jQuery, HTML5, CSS3, ActiveRecord, Decoupled Architechture, Auth0, Rails API, Google+ API, Venmo API</p>
           </div>
         </article>
         <!-- <span class="nth-piece is-displayed-mobile"></span> -->
@@ -196,27 +196,27 @@
         <nav class="grid__col--12 panel--centered">
           <ul class="icons">
             <li class="nav__item">
-              <a href="#" class="icon fav--email">
+              <a href="mailto:AESM85@gmail.com" class="icon fav--email">
                 <span class="label">Email</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--linkedin">
+              <a href="http://www.linkedin.com/in/SuitAndCape" target="_blank" class="icon fav--linkedin">
                 <span class="label">LinkedIn</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--github">
+              <a href="http://www.github.com/AESM" target="_blank" class="icon fav--github">
                 <span class="label">Github</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--twitter">
+              <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--dribbble">
+              <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
             </li>
