--- a/showcase-ourhouse.html
+++ b/showcase-ourhouse.html
@@ -148,6 +148,12 @@
         <article class="grid">
           <header class="grid__col--12 panel--centered">
             <h2 class="headline-secondary--grouped">Housemates doing house things.</h2>
+
+              <a href="https://github.com/AESM/OurHouse_Central_Repo" target="_blank" class="btn--warning">Source Link</a>
+              <!-- <a href="#" class="button">Source Link</a> -->
+
+              <!-- <a target="_blank" class="fkr--missing">Project Link (Unavailable)</a> -->
+              <!-- <a href="#" class="button">Project Link</a> -->
           </header>
 
           <div class="grid__col--4 vid">
@@ -182,38 +188,69 @@
           <header class="panel--centered">
             <span class="grid__col--12">
               <p class="para-primary"><strong>Front-End</strong>:<br>AngularJS, Ionic Mobile Framework, JavaScript, jQuery, HTML5, CSS3<br><br>
-              <strong>Back-End</strong>:<br>Ruby on Rails<br><br>
-              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
+              <strong>Back-End</strong>:<br>Ruby on Rails, ActiveRecord, Rails API<br><br>
+              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API<br><br>
+              <strong>Team</strong>:<br>Brian Vogelgesang, Joseph Won, Ali Esmaili, Charles Kim, & Anthony Ng</p>
             </span>
           </header>
         </article>
       </section>
 
-      <!-- Journey Spacer -->
-      <section class="layer-pic__dos" id="journey-spacer">
+      <!-- Notes Spacer -->
+      <section class="layer-pic__dos" id="notes-spacer">
         <article class="grid">
           <header class="grid__col--12">
-            <h2 class="panel--centered headline-secondary--liner">The Journey</h2>
+            <h2 class="panel--centered headline-secondary--liner">Notes</h2>
           </header>
         </article>
       </section>
 
-      <!-- Journey -->
-      <section id="journey">
+      <!-- Notes -->
+      <section id="notes">
         <article class="grid">
           <header class="panel">
-            <span class="grid__col--12">
-              <p class="para-primary"><strong>Front-End</strong>:<br>AngularJS, Ionic Mobile Framework, JavaScript, jQuery, HTML5, CSS3<br><br>
-              <strong>Back-End</strong>:<br>Ruby on Rails, ActiveRecord<br><br>
-              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API</p>
-            </span>
+            <div class="grid__col--12">
+              <p class="para-primary">My teammates and I have all experienced living with housemates.  We wanted to solve the issue of prioritizing communication: activities, scheduling, expenses, and discussing household needs.  This is what inspired us to create OurHouse.<br><br>
+              OurHouse was built using a decoupled architecture: the front-end with Angular, Ionic, JavaScript, jQuery, HTML5, and CSS3; and the back-end using Rails, ActiveRecord, and Rails API with features from Auth0, the Google+ API, and the Venmo API.</p>
+            </div>
+          </header>
+        </article>
+
+        <article class="grid">
+          <header class="panel">
+            <div class="grid__col--4">
+              <span>
+                <a href="#pic-1">
+                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_wireframe_explanation.jpg" alt="Our House Wireframe">
+                </a>
+                <a href="#_" class="image-overlay" id="pic-1">
+                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_wireframe_explanation.jpg" alt="Our House Wireframe">
+                </a>
+              </span>
+            </div>
+
+            <div class="grid__col--4">
+              <a href="#pic-2">
+                <img class="img--project-process img--wrap cent" src="public/images/projects/ourhouse/OurHouse_schema.jpg" alt="Our House Schema">
+              </a>
+              <a href="#_" class="image-overlay" id="pic-2">
+                <img src="public/images/projects/ourhouse/OurHouse_schema.jpg" alt="Our House Schema">
+              </a>
+            </div>
+
+            <div class="grid__col--4">
+              <span>
+                <a href="#pic-3">
+                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_phone.png" alt="Our House Phone Image">
+                </a>
+                <a href="#_" class="image-overlay" id="pic-3">
+                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_phone.png" alt="Our House Phone Image">
+                </a>
+              </span>
+            </div>
           </header>
         </article>
       </section>
-
-
-
-
     </main>
 
     <!-- Footer -->
@@ -226,27 +263,27 @@
         <nav class="grid__col--12 panel--centered">
           <ul class="icons">
             <li class="nav__item">
-              <a href="#" class="icon fav--email">
+              <a href="mailto:AESM85@gmail.com" class="icon fav--email">
                 <span class="label">Email</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--linkedin">
+              <a href="http://www.linkedin.com/in/SuitAndCape" target="_blank" class="icon fav--linkedin">
                 <span class="label">LinkedIn</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--github">
+              <a href="http://www.github.com/AESM" target="_blank" class="icon fav--github">
                 <span class="label">Github</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--twitter">
+              <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--dribbble">
+              <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
             </li>
