--- a/about.html
+++ b/about.html
@@ -242,27 +242,27 @@
         <nav class="grid__col--12 panel--centered">
           <ul class="icons">
             <li class="nav__item">
-              <a href="#" class="icon fav--email">
+              <a href="mailto:AESM85@gmail.com" class="icon fav--email">
                 <span class="label">Email</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--linkedin">
+              <a href="http://www.linkedin.com/in/SuitAndCape" target="_blank" class="icon fav--linkedin">
                 <span class="label">LinkedIn</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--github">
+              <a href="http://www.github.com/AESM" target="_blank" class="icon fav--github">
                 <span class="label">Github</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--twitter">
+              <a href="http://www.twitter.com/SuitAndCape" target="_blank" class="icon fav--twitter">
                 <span class="label">Twitter</span>
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="icon fav--dribbble">
+              <a href="https://dribbble.com/SuitAndCape" target="_blank" class="icon fav--dribbble">
                 <span class="label">Dribbble</span>
               </a>
             </li>
