Fix responsive design of OurHouse page

--- a/showcase-suitandcape.html
+++ b/showcase-suitandcape.html
@@ -151,7 +151,7 @@
               <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" target="_blank" class="btn--warning">Source Link</a>
               <!-- <a href="#" class="button">Source Link</a> -->
 
-              <a href="http://SuitAndCape.github.io/" target="_blank" class="btn--warning">Project Link</a>
+              <a href="http://SuitAndCape.github.io/" class="btn--warning">Project Link</a>
               <!-- <a href="#" class="button">Project Link</a> -->
           </header>
 
