Complete SuitAndCape showcase page

--- a/about.html
+++ b/about.html
@@ -149,23 +149,23 @@
         <!-- About navigation -->
         <article class="grid about-nav">
           <div class="grid__col--12 panel--centered">
-            <!-- <form class="rdo--warning is-collapsed-mobile">
+            <!-- <form class="rdo--warm is-collapsed-mobile">
               <label for="slides_1">Blurb</label>
             </form>
-            <form class="rdo--warning is-collapsed-mobile">
+            <form class="rdo--warm is-collapsed-mobile">
               <label for="slides_2">Personal</label>
             </form>
-            <form class="rdo--warning is-collapsed-mobile">
+            <form class="rdo--warm is-collapsed-mobile">
               <label for="slides_3">Experience</label>
             </form>
-            <form class="rdo--warning is-collapsed-mobile">
+            <form class="rdo--warm is-collapsed-mobile">
               <label for="slides_4">Tools</label>
             </form> -->
-            <label for="slides_1" class="rdo--warning is-collapsed-mobile">Blurb</label>
-            <label for="slides_2" class="rdo--warning is-collapsed-mobile">Personal</label>
-            <label for="slides_3" class="rdo--warning is-collapsed-mobile">Experience</label>
-            <label for="slides_4" class="rdo--warning is-collapsed-mobile">Tools</label>
-            <!-- <label for="slides_5"  class="rdo--warning is-collapsed-mobile">Gallery</label> -->
+            <label for="slides_1" class="rdo--warm is-collapsed-mobile">Blurb</label>
+            <label for="slides_2" class="rdo--warm is-collapsed-mobile">Personal</label>
+            <label for="slides_3" class="rdo--warm is-collapsed-mobile">Experience</label>
+            <label for="slides_4" class="rdo--warm is-collapsed-mobile">Tools</label>
+            <!-- <label for="slides_5"  class="rdo--warm is-collapsed-mobile">Gallery</label> -->
           </div>
         </article>
 
