--- a/showcase-ourhouse.html
+++ b/showcase-ourhouse.html
@@ -148,7 +148,7 @@
           <header class="grid__col--12 panel--centered">
             <h2 class="headline-secondary--grouped">Housemates doing house things.</h2>
 
-            <a href="https://github.com/AESM/OurHouse_Central_Repo" target="_blank" class="btn--warning">Source Link</a>
+            <a href="https://github.com/AESM/OurHouse_Central_Repo" target="_blank" class="btn--warm">Source Link</a>
             <!-- <a href="#" class="button">Source Link</a> -->
 
             <!-- <a target="_blank" class="fkr--missing">Project Link (Unavailable)</a> -->
