--- a/showcase-suitandcape.html
+++ b/showcase-suitandcape.html
@@ -142,32 +142,32 @@
     <!-- Main -->
     <main class="layer-gradient--to-b">
 
-      <!-- OurHouse Showcase -->
-      <section id="showcase-ourhouse">
+      <!-- SuitAndCape Showcase -->
+      <section id="showcase-suitandcape">
         <article class="grid">
           <header class="grid__col--12 panel--centered">
             <h2 class="headline-secondary--grouped">My site on my site... So meta.</h2>
 
-              <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" target="_blank" class="btn--warning">Source Link</a>
+              <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" target="_blank" class="btn--warm">Source Link</a>
               <!-- <a href="#" class="button">Source Link</a> -->
 
-              <a href="http://SuitAndCape.github.io/" class="btn--warning">Project Link</a>
+              <a href="http://SuitAndCape.github.io/" class="btn--warm">Project Link</a>
               <!-- <a href="#" class="button">Project Link</a> -->
           </header>
 
-          <div class="grid__col--4 vid">
-            <!-- <video autoplay loop class="vid">
-              <source src="public/videos/OurHouse.mp4" type="video/mp4">
-            </video> -->
+          <div class="grid__col--4">
+            <span>
+              <img class="img--project-process img--wrap" src="public/images/projects/suitandcape/SuitAndCape-640x640.png" alt="Suit And Cape Dot Com">
+            </span>
           </div>
 
           <div class="grid__col--7">
-            <!-- <p class="para-primary"><strong>OurHouse</strong> is a mobile and web social media app for housemates, allowing users to coordinate social events, household chores, and payments among their fellow housemates.<br>
-            The functionality of the app is contained within a sleek and intuitive interface, divided into four main sections.<br><br>
-            <strong>Home</strong>: Respond to and delete tasks, notifications, and activity invitations from other housemates, with support for filtering by message type.<br><br>
-            <strong>Message</strong>: Send any type of message to the other members of the house.<br><br>
-            <strong>Payments</strong>: Connect to Venmo and send money to any of the house members.<br><br>
-            <strong>Housemates</strong>: Add new housemates and view the profiles and message history of existing housemates.</p> -->
+            <p class="para-primary"><strong>SuitAndCape</strong> is an ever evolving project, allowing me to hone my web development and design skills by practicing familiar technologies, and trying out some new ones along the way.  Here, you can find the projects I've made and get to know me a bit better along the way.<br>
+            Currently, the site consists of four main sections.<br><br>
+            <strong>Home</strong>: A standard landing page with the basic guide layout and a big ol' hello from yours truly.<br><br>
+            <strong>About</strong>: Where I've been, what I'm up to, what I work with, why I do stuff.  All wrapped up in one easy-to-find section.  Neat<br><br>
+            <strong>Projects</strong>: You can peruse some selections of things I have created solo or as part of a collaboration.<br><br>
+            <strong>Flyer</strong>: An overview of the site's content.  Also, the place I like to occasionaly stash Easter-eggs.</p>
           </div>
         </article>
       </section>
@@ -186,10 +186,10 @@
         <article class="grid">
           <header class="panel--centered">
             <span class="grid__col--12">
-              <!-- <p class="para-primary"><strong>Front-End</strong>:<br>AngularJS, Ionic Mobile Framework, JavaScript, jQuery, HTML5, CSS3<br><br>
-              <strong>Back-End</strong>:<br>Ruby on Rails, ActiveRecord, Rails API<br><br>
-              <strong>Additional</strong>:<br>Decoupled Architechture, Auth0, Google+ API, Venmo API<br><br>
-              <strong>Team</strong>:<br>Brian Vogelgesang, Joseph Won, Ali Esmaili, Charles Kim, & Anthony Ng</p> -->
+              <p class="para-primary"><strong>Currently Implemented</strong>:<br>HTML5, CSS3, Sass, JavaScript, jQuery, Elevator.js<br><br>
+              <strong>Future Implementations</strong>:<br>Handlebars.js, RequireJS, Underscore.js, Hammer.js/jQuery Mobile Framework<br><br>
+              <strong>Additional</strong>:<br>SMACCS, Mobile-First and Responsive Design, Design Tests, Personally Created All Major Features, No Sass Libraries<br><br>
+              <strong>Special Thanks</strong>:<br>Molly Allison-Baker, Hrag Chanchanian, Allan Enemark, Bekka Bjöke, Lam Nguyen</p>
             </span>
           </header>
         </article>
@@ -209,8 +209,9 @@
         <article class="grid">
           <header class="panel">
             <div class="grid__col--12">
-              <!-- <p class="para-primary">My teammates and I have all experienced living with housemates.  We wanted to solve the issue of prioritizing communication: activities, scheduling, expenses, and discussing household needs.  This is what inspired us to create OurHouse.<br><br>
-              OurHouse was built using a decoupled architecture: the front-end with Angular, Ionic, JavaScript, jQuery, HTML5, and CSS3; and the back-end using Rails, ActiveRecord, and Rails API with features from Auth0, the Google+ API, and the Venmo API.</p> -->
+              <p class="para-primary">Throughout my "I work for the Internet" experience, I've had to learn a lot and I've had to learn it fast.  The most effective way of accomplishing this, has been to build with the most basic form of the technology in question to get a deeper understanding of why it works the way it does.  I whiteboarded the UX-workflow, wireframes, then decided on what tools to use.<br><br>
+              This was the first time really working with Sass, so I decided to play with it on inferno-mode: use SMACCS methodologies with no frameworks or libraries (ie. Compass or Bourbon.io).  Any helpful function or mixin snippets that I found online, I made sure to fully understand how they work.<br><br>
+              I'm used to creating parallel back-end test suites, so because this project was really design heavy, I included a design-perspective test, which was highly beneficial to my mobile-first philosophy.  Through the power of pure CSS, I created sliders, modals, and other features that usually rely on JavaScript.</p>
             </div>
           </header>
         </article>
@@ -218,36 +219,36 @@
         <article class="grid">
           <header class="panel">
             <div class="grid__col--4">
-              <!-- <span>
+              <span>
                 <a href="#pic-1">
-                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_wireframe_explanation.jpg" alt="Our House Wireframe">
+                  <img class="img--project-process img--wrap" src="public/images/projects/suitandcape/UX-Workflow_Whiteboard.png" alt="Suit And Cape Workflow">
                 </a>
                 <a href="#_" class="image-overlay" id="pic-1">
-                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_wireframe_explanation.jpg" alt="Our House Wireframe">
+                  <img class="img--project-process img--wrap" src="public/images/projects/suitandcape/UX-Workflow_Whiteboard.png" alt="Suit And Cape Workflow">
                 </a>
-              </span> -->
+              </span>
             </div>
 
             <div class="grid__col--4">
-              <!-- <span>
+              <span>
                 <a href="#pic-2">
-                  <img class="img--project-process img--wrap cent" src="public/images/projects/ourhouse/OurHouse_schema.jpg" alt="Our House Schema">
+                  <img class="img--project-process img--wrap cent" src="public/images/projects/suitandcape/SuitAndCape_design_tests.png" alt="Suit And Cape Design Tests">
                 </a>
                 <a href="#_" class="image-overlay" id="pic-2">
-                  <img src="public/images/projects/ourhouse/OurHouse_schema.jpg" alt="Our House Schema">
+                  <img src="public/images/projects/suitandcape/SuitAndCape_design_tests.png" alt="Suit And Cape Design Tests">
                 </a>
-              </span> -->
+              </span>
             </div>
 
             <div class="grid__col--4">
-              <!-- <span>
+              <span>
                 <a href="#pic-3">
-                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_phone.png" alt="Our House Phone Image">
+                  <img class="img--project-process img--wrap" src="public/images/projects/suitandcape/SuitAndCape_Wireframes.png" alt="Suit And Cape Wireframes">
                 </a>
                 <a href="#_" class="image-overlay" id="pic-3">
-                  <img class="img--project-process img--wrap" src="public/images/projects/ourhouse/OurHouse_phone.png" alt="Our House Phone Image">
+                  <img class="img--project-process img--wrap" src="public/images/projects/suitandcape/SuitAndCape_Wireframes.png" alt="Suit And Cape Wireframes">
                 </a>
-              </span> -->
+              </span>
             </div>
           </header>
         </article>
