Final MVP push, begin filling in text-content, add certificates

--- a/flyer.html
+++ b/flyer.html
@@ -161,8 +161,8 @@
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">About me as a person</h2>
           </header>
-          <span class="grid__col--5">
-            VECTOR ICONS HOOK
+          <span class="icon fa-code">
+            VECTOR HOOKS
           </span>
 
           <span class="grid__col--6">
