Add Vector Art to the Flyer page

--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@
       <section id="projects-page">
         <article class="grid">
           <header class="grid__col--12 panel--centered">
-            <h2 class="headline-secondary--grouped">A few things I've worked on...</h2>
+            <h2 class="headline-secondary--grouped">A few things I've worked on.</h2>
           </header>
         </article>
 
