--- a/flyer.html
+++ b/flyer.html
@@ -161,8 +161,27 @@
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">About me as a person</h2>
           </header>
-          <span class="icon fa-code">
-            VECTOR HOOKS
+          <span class="grid__col--5">
+            <ul class="icon-party">
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+              <li>
+                <span class="fa fa-camera-retro icn--fntawsm advrt"></span>
+              </li>
+            </ul>
           </span>
 
           <span class="grid__col--6">
